<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2022 Stokkur Software ehf.
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Afladagbok.Text.DarkBlue.VeryLargeText.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/big_space"
                android:text="@string/hooks_title" />

            <RelativeLayout
                android:id="@+id/angle_amount_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <EditText
                    android:id="@+id/angle_amount_input"
                    style="@style/Afladagbok.Text.DarkBlue.VeryLargerText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/big_space"
                    android:layout_marginTop="@dimen/massive_space"
                    android:layout_marginBottom="@dimen/massive_space"
                    android:background="@android:color/transparent"
                    android:focusableInTouchMode="true"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="5"
                    android:minWidth="20dp" />

                <TextView
                    style="@style/Afladagbok.Text.Gray.LargerText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/angle_amount_input"
                    android:layout_marginLeft="@dimen/small_space"
                    android:layout_toRightOf="@id/angle_amount_input"
                    android:text="@string/hooks" />
            </RelativeLayout>

            <TextView
                style="@style/Afladagbok.Text.DarkBlue.VeryLargeText.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/big_space"
                android:text="@string/bjodur_title" />

            <RelativeLayout
                android:id="@+id/bjodur_amount_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <EditText
                    android:id="@+id/bjodur_amount_input"
                    style="@style/Afladagbok.Text.DarkBlue.VeryLargerText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/big_space"
                    android:layout_marginTop="@dimen/massive_space"
                    android:layout_marginBottom="@dimen/massive_space"
                    android:background="@android:color/transparent"
                    android:focusableInTouchMode="true"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="5"
                    android:minWidth="20dp" />

                <TextView
                    style="@style/Afladagbok.Text.Gray.LargerText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/bjodur_amount_input"
                    android:layout_marginLeft="@dimen/small_space"
                    android:layout_toRightOf="@id/bjodur_amount_input"
                    android:text="@string/bjodur" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/next_step_button"
                style="@style/Afladagbok.Text.White.LargerText.Bold"
                android:layout_width="match_parent"
                android:layout_height="@dimen/switch_button_height"
                android:layout_alignParentBottom="true"
                android:layout_margin="@dimen/big_space"
                android:background="@drawable/green_save_button"
                android:text="@string/next_step_button" />

            <EditText
                android:id="@+id/edt_thief"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:focusable="true"
                android:focusableInTouchMode="true" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
